edits to chapter 1, mood, 13, with some new references

--- a/book.bib
+++ b/book.bib
@@ -58,6 +58,36 @@ year = {2017}
 }
 
 
+@article{Dakos2010,
+abstract = {Generic early-warning signals such as increased autocorrelation and variance have been demonstrated in time-series of systems with alternative stable states approaching a critical transition. However, lag times for the detection of such leading indicators are typically long. Here, we show that increased spatial correlation may serve as a more powerful early-warning signal in systems consisting of many coupled units. We first show why from the universal phenomenon of critical slowing down, spatial correlation should be expected to increase in the vicinity of bifurcations. Subsequently, we explore the applicability of this idea in spatially explicit ecosystem models that can have alternative attractors. The analysis reveals that as a control parameter slowly pushes the system towards the threshold, spatial correlation between neighboring cells tends to increase well before the transition. We show that such increase in spatial correlation represents a better early-warning signal than indicators derived from time-series provided that there is sufficient spatial heterogeneity and connectivity in the system.},
+author = {Dakos, Vasilis and van Nes, Egbert H. and Donangelo, Ra{\'{u}}l and Fort, Hugo and Scheffer, Marten},
+doi = {10.1007/s12080-009-0060-6},
+isbn = {1208000900606},
+issn = {18741738},
+journal = {Theoretical Ecology},
+keywords = {Alternative stable states,Autocorrelation,Critical transition,Early-warning signals,Fold bifurcation,Regime shift},
+mendeley-groups = {case studies/csd},
+number = {3},
+pages = {163--174},
+title = {{Spatial correlation as leading indicator of catastrophic shifts}},
+volume = {3},
+year = {2010}
+}
+
+
+@book{Derogatis1994,
+abstract = {Derogatis LR. Symptom Checklist-90-R (SCL-90-R): Administration, Scoring, and Procedures Manual. 3rd ed. Minneapolis, Minn: National Computer Systems; 1994. .},
+author = {Derogatis, L. R.},
+booktitle = {Minneapolis, MN: NCS Pearson},
+mendeley-groups = {questionnaires},
+publisher = {Minneapolis, MN: NCS Pearson},
+title = {{Symptom Checklist-90-R (SCL-90-R): Administration, scoring, and procedures manual}},
+year = {1994}
+}
+
+
+
+
 @article{Desmet2016,
   abstract = {Pick-A-Mood is a cartoon-based pictorial instrument for reporting and expressing moods. It measures eight distinct mood states in a quick and intuitive way, and can be used both for qualitative and quantitative research. Pick-A-Mood consists of three cartoon characters: a male, female and a robot character (Figure 1). Each character includes nine expressions that represent eight distinct mood states (and one neutral character). The sets are interchangeable; choice of character can be based on respondent demographics or on other pragmatic considerations. This manual provides a step-by-step guide for using Pick-A-Mood. Pick-A-Mood consists of three characters, each expressing eight different mood states (and a neutral expression), representing four basic mood categories: Excited-Lively and Cheerful-Happy (for energized-pleasant), Tense-Nervous and Irritated-Annoyed (for energized-unpleasant), Calm-Serene and Relaxed-Carefree (for calm-pleasant), and Bored-Weary and Gloomy-Sad (for calm-unpleasant), see Figure 2. The use of cartoon characters enables people to visually express or report their mood in an intuitive and easy-to-use way. Pick-A-Mood requires little time and effort of the respondents, making it suitable for design research applications, in which people often have little time or motivation to report their moods.},
   author = {Desmet, P M A and Vastenburg and Romero, N},
@@ -164,6 +194,24 @@ year = {2012}
 }
 
 
+@article{Groot2010,
+abstract = {BACKGROUND: A dichotomous ICD-10 or DSM-IV diagnosis of depression does not fully capture its natural phenotype: a dimensional continuum of environmentally reactive fluctuations in mood. Therefore, ICD and DSM labels of depression, although useful from a service perspective, fail to help patients directly. This paper will show, using the author's experiences as an example, that patients with mood disorders can "diagnose" the natural phenotype, in the sense that systematic recording of painful fluctuations in environmentally reactive moods by the patient him- or herself may: (i) not only provide an accurate assessment of depression, but (ii) result in a process of conscious awareness of aberrant responses to the environment - a first step on the way to recovery.$\backslash$n$\backslash$nMETHOD: The author developed a rudimentary but useable method to diagnose his dynamic mood fluctuations over the years. The continuous assessment method allowed him to systematically score his mood and activities every day, enabling him to study and analyse in detail the course and context of mood symptoms over time.$\backslash$n$\backslash$nRESULTS: With time, this initial strategy evolved into a new, more informed, more empowered diagnosis of his problems and ultimately contributed to a more resilient mind set with regard to mood changes and ways of active rather than avoidant coping with them.$\backslash$n$\backslash$nCONCLUSIONS: Many people with mood problems receive a DSM label but are not taught to engage in diagnosing what depression is: a dynamic pattern of environmentally reactive mood responses. Continuous diagnostic self-assessment strategies may help patients to learn, adjust and cope with their emotional vulnerabilities expressed as dimensional and reactive variation in mood. Patients can be empowered to diagnose experiences as a means to understand the sources and consequences of continuous mood variation over time.},
+author = {Groot, Peter C.},
+doi = {10.3109/09638237.2010.494188},
+isbn = {1360-0567},
+issn = {09638237},
+journal = {Journal of Mental Health},
+keywords = {Depression,diagnosis,self-help devices,self-help groups},
+mendeley-groups = {Groups/Groups-NL/Maastricht,Instruments/psymate},
+number = {4},
+pages = {352--362},
+pmid = {20636115},
+title = {{Patients can diagnose too: How continuous self-assessment aids diagnosis of, and recovery from, depression}},
+volume = {19},
+year = {2010}
+}
+
+
 @article{HaedtMatt2011,
 abstract = {The affect regulation model of binge eating, which posits that patients binge eat to reduce negative affect (NA), has received support from cross-sectional and laboratory-based studies. Ecological momentary assessment (EMA) involves momentary ratings and repeated assessments over time and is ideally suited to identify temporal antecedents and consequences of binge eating. This meta-analytic review includes EMA studies of affect and binge eating. Electronic database and manual searches produced 36 EMA studies with N = 968 participants (89{\%} Caucasian women). Meta-analyses examined changes in affect before and after binge eating using within-subjects standardized mean gain effect sizes (ESs). Results supported greater NA preceding binge eating relative to average affect (ES = 0.63) and affect before regular eating (ES = 0.68). However, NA increased further following binge episodes (ES = 0.50). Preliminary findings suggested that NA decreased following purging in bulimia nervosa (ES = -0.46). Moderators included diagnosis (with significantly greater elevations of NA prior to bingeing in binge eating disorder compared to bulimia nervosa) and binge definition (with significantly smaller elevations of NA before binge vs. regular eating episodes for the Diagnostic and Statistical Manual of Mental Disorders definition compared to lay definitions of binge eating). Overall, results fail to support the affect regulation model of binge eating and challenge reductions in NA as a maintenance factor for binge eating. However, limitations of this literature include unidimensional analyses of NA and inadequate examination of affect during binge eating, as binge eating may regulate only specific facets of affect or may reduce NA only during the episode.},
 archivePrefix = {arXiv},
@@ -242,6 +290,25 @@ year = {2012}
 }
 
    
+@misc{Scheffer2009,
+abstract = {Complex dynamical systems, ranging from ecosystems to financial markets and the climate, can have tipping points at which a sudden shift to a contrasting dynamical regime may occur. Although predicting such critical points before they are reached is extremely difficult, work in different scientific fields is now suggesting the existence of generic early-warning signals that may indicate for a wide class of systems if a critical threshold is approaching.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Scheffer, Marten and Bascompte, Jordi and Brock, William A. and Brovkin, Victor and Carpenter, Stephen R. and Dakos, Vasilis and Held, Hermann and {Van Nes}, Egbert H. and Rietkerk, Max and Sugihara, George},
+booktitle = {Nature},
+doi = {10.1038/nature08227},
+eprint = {arXiv:1011.1669v3},
+isbn = {1476-4687 (Electronic)$\backslash$n0028-0836 (Linking)},
+issn = {00280836},
+mendeley-groups = {case studies/csd},
+number = {7260},
+pages = {53--59},
+pmid = {19727193},
+title = {{Early-warning signals for critical transitions}},
+volume = {461},
+year = {2009}
+}
+
    
 @article{Shiffman2008,
   abstract = {Assessment in clinical psychology typically relies on global retrospective self-reports collected at research or clinic visits, which are limited by recall bias and are not well suited to address how behavior changes over time and across contexts. Ecological momentary assessment (EMA) involves repeated sampling of subjects' current behaviors and experiences in real time, in subjects' natural environments. EMA aims to minimize recall bias, maximize ecological validity, and allow study of microprocesses that influence behavior in real-world contexts. EMA studies assess particular events in subjects' lives or assess subjects at periodic intervals, often by random time sampling, using technologies ranging from written diaries and telephones to electronic diaries and physiological sensors. We discuss the rationale for EMA, EMA designs, methodological and practical issues, and comparisons of EMA and recall data. EMA holds unique promise to advance the science and practice of clinical psychology by shedding light on the dynamics of behavior in real-world settings.},
