--- a/part5/csd.Rmd
+++ b/part5/csd.Rmd
@@ -1,18 +1,56 @@
 # (PART) EMA Case Studies {-}
 
-# Critical Slowing Down {#csd}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta [@Kossakowski2017; @Wichers2016].
+# Early Warning Signals of Depression: The Critical Slowing Down Study {#csd}
+
+One of the unique selling points of EMA is that it might help to identify early
+warning signs of serious mental health detoriation. Subtle changes in time
+series of mood variables, for example, might signal a depression relapse. If we
+can reliably identify detect these changes, it might be possible to intervene
+early, to prevent the relapse from occuring.
+
+But what changes, exactly, should we look for? What are these early warning
+signs?
+
+## Critical Slowing Down
+
+Critical Slowing Down (CSD) is a concept from dynamic systems theory. In
+a complex dynamic system, the theory posits, qualitative state changes
+are preceded by a change in which the system recovers from disturbances
+(perturbations). In the stable situation, the systems quickly recovers back to
+the equilibrium state. Prior to a transition to a new equilibrium, however, this
+recovery-time increases. 
+
+There are three statistical indicators of CSD [Scheffer2009; Dakos2010]:
+
+- Increased variance
+
+- Increased auto-correlation
+
+- Increased spatial correlation
+
+
+## The CSD N = 1 Study
+
+In an explorative study, data suggested that CSD was associated with depression severity [VandeLeemput2014]. This was a between-subject finding, however. CSD remained to be demonstrated in within-subject data.
+
+In this chapter, we re-construct a study that aimed to demonstrate CSD in
+EMA-data of a single patient with a history of major depression [@Groot2010,
+@Kossakowski2017; @Wichers2016]. The patient, a 57-year old male, monitored
+himself extensively for 239 days, during a single case double-blind medication
+reduction trial. While doing so, he experienced a relapse. Was this transition
+preceded by a CSD of his mood state?
+
 
 ## Preliminaries
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
+For this reconstruction, we need two R packages: 
+
+- Raw EMA data of this study were published in the public domain
+[@Kossakowski2017]. We included the data in the emaph package.
+
+- To manipulate the raw data and reconstruct the plots of the article, we are
+going to use several functions from the tidyverse.
 
 ```{r cs131, eval = FALSE}
 # Code snippet 13.1: required libraries for the csd reconstruction
@@ -21,15 +59,64 @@ library(tidyverse)
 ```
 
 
-### Define mental state 'scales'
+## Plotting the course of depression 
 
-mental states: positive and negative affect, mental unrest. Vestibulum hendrerit
-tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci
-vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex
-velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
+Let's take a look at the development of depressive symptoms first. These were
+tapped with weekly assessments. The patient answered all thirtheen items of
+the depression scale of the 'Symptom Checklist-90-Revised' (SCL-90-R), a well-established self-report measure [@Derogatis1994].
 
-```{r cs132}
-# Code snippet 13.2: mood state subscale definitions
+The code below reconstructs Figure 1 in the Wichers et al study. It plots `csd$scl90r_dep`, the SCL90-R depression scale score (the mean of the SCL-90 item-scores), by `csd$dayno`(the time variable). Different phases of the experiment (`csd$phase`) are marked by different colors. 
+
+```{r cs132, fig.asp = .5}
+# Code snippet 13.2: Plot depression score
+
+# get scl-90 data and day / phase
+d <- csd %>% 
+  filter(!is.na(scl90r_dep)) %>% 
+  select(dayno, phase, scl90r_dep)
+
+# retain only one scl-90-r assessment per day
+d <- unique(d) 
+
+# reconstruct Figure 1 in Wicherts et al 2016.
+ggplot(data = d, 
+       aes(x = dayno, 
+           y = scl90r_dep, 
+           group = 1)) +
+  geom_point(aes(color = phase)) + 
+  geom_step(aes(color = phase)) + 
+  scale_x_continuous(breaks = seq(from = 1, 
+                     to = 239, 
+                     by = 9)) +
+  theme(axis.text.x = element_text(angle = 90, 
+                                   hjust = 1),
+        legend.position="top")
+```
+
+The plot shows how the depression relapse develops over time. After day
+127, several weeks after the full reduction of the medication, the depression
+score increased considerably. This is confirmed by a change score analysis:
+
+```{r cs132b}
+# Code snippet 13.3: Change score analysis of depression scores
+fm <- lm(scl90r_dep ~ I(dayno > 127), data = d)
+summary(fm)
+```
+
+```{r eval = FALSE}
+library(ecp)
+e1 = e.divisive(matrix(d$scl90r_dep), sig = .01, min.size = 5)
+d$cluster <- e1$cluster
+```
+
+### Defining the mental state scale
+
+To define a measure of 'mental state', the researchers selected 13 items from the full EMA dataset. They grouped these items in 5 factors: positive affect (pa; 4 items), negative affect (na; 4 items), mental unrest (mu; 3 items), suspiciousness (su; 1 item), and worrying (wo; 1 item).
+
+In this reconstruction, we calculate the mental state score as the sum of the standardized scores of the five factors.   
+
+```{r cs133}
+# Code snippet 13.3: mood state calculation
 
 # positive affect
 pa <- c("mood_enthus", "mood_cheerf", 
@@ -42,44 +129,16 @@ na <- c("mood_lonely", "mood_anxious",
 # mental unrest
 mu <- c("mood_irritat", "pat_restl", 
         "pat_agitate")
-```
 
-
-### Remove rows with many missing values.
-
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
-
-```{r cs133}
-# Code snippet 13.3: missing value removal
-
-csd$nna <- csd %>%
-  select(matches("mood_")) %>%
-  is.na(.) %>% rowSums
-csd <- csd %>% filter(nna == 0)
-```
-
-
-### MoodState sum score
-
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
-
-```{r cs134}
-# Code snippet 13.4: calculating the mood state sum score
-
+# calculate factor scores
 csd$pa <- csd %>%
   select(pa) %>%
-  #scale(.) %>%
+  scale(.) %>%
   rowMeans(., na.rm = TRUE)
 
 csd$na <- csd %>%
   select(na) %>%
-  #scale(.) %>%
+  scale(.) %>%
   rowMeans(., na.rm = TRUE)
 
 csd$mu <- csd %>%
@@ -90,23 +149,49 @@ csd$mu <- csd %>%
 csd$su <- scale(csd$mood_suspic)
 csd$wo <- scale(csd$pat_worry)
 
+# Moodstate score: sum of factors
+# (reverse score pa, to let high scores reflect less favorable conditions)
+csd$pa <- -csd$pa
 csd$ms = select(csd, pa, na, mu, su, wo) %>%
   rowSums(na.rm = TRUE)
+
+csd$ms <- csd$mood_anxious + csd$mood_lonely + csd$mood_guilty + csd$mood_doubt +
+          csd$mood_irritat + csd$pat_restl + csd$pat_agitate + csd$mood_suspic + 
+          csd$pat_worry  - 
+          csd$mood_enthus - csd$mood_cheerf - csd$mood_strong - csd$mood_satisfi
+
 ```
 
 
-### De-trend
+### Remove rows with many missing values.
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
+For the mood state variable to be valid, its factors should be adequately
+measured. Rows, in which one or more of the components had missing values, are
+therefore removed from the analysis.
+
+```{r cs134}
+# Code snippet 13.4: missing value removal
+csd$nna <- csd %>%
+  select(matches("mood_")) %>%
+  is.na(.) %>% rowSums
+csd <- csd %>% filter(nna == 0)
+```
+
+
+## De-trending the mood state
+
+Since trends in time-series can distort the variance and autocorrelation, we
+need to de-trend the moodstate variable. 
+
+Let's first confirm that a trend in the data, indeed, exists. If we plot
+moodstate over time, we see a gradually increase, and two embedded
+subtrends.
 
 ```{r cs135, fig.asp = .4}
 # Code snippet 13.5: plot moodstate score over time
-ggplot(data = csd, 
-       aes(x = dayno, 
-           y = ms)) +
+g <- ggplot(data = csd, 
+            aes(x = dayno, 
+                y = ms)) +
   geom_smooth() + 
   geom_line() + 
   scale_x_continuous(
@@ -116,11 +201,11 @@ ggplot(data = csd,
   theme(
     axis.text.x = element_text(angle = 90, 
                                hjust = 1))
+
+g
 ```
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit.
+To de-trend, we fit a generalized additive model with a spline-based smoother. This models the trend. By using the residuals of his model (i.e., by subtracting the predicted score from the observed score), the trends are removed.
 
 ```{r cs136}
 # Code snippet 13.6: de-trending moodstate
@@ -128,48 +213,39 @@ fm <- mgcv::gam(formula = ms ~ s(dayno, bs = "cs"), data = csd)
 csd$ms_dt <- residuals(fm)
 ```
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit.
+To check the succes of the de-trending, plot the de-trended variable over time. As can be seen, the gradual increase in the previous plot has disappeared. 
 
 ```{r cs137, fig.asp = .4}
 # Code snippet 13.7: plot de-trended moodstate
-ggplot(data = csd, 
-       aes(x = dayno, 
-           y = ms_dt)) +
-  geom_smooth() + 
-  geom_line() + 
-  scale_x_continuous(
-    breaks = seq(from = 1, 
-                 to = 239, 
-                 by = 9)) +
-  theme(
-    axis.text.x = element_text(angle = 90, 
-                               hjust = 1))
+g$mapping$y <- substitute(csd$ms_dt)
+g
 ```
 
+Note how the definition of the first plot is used to produce the second. Do not write more code than necessary!
 
-### MoodState Variance & Autocorrelation (30-day window)
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
+## Calculating the moving average of mood state variance & autocorrelation
+
+Both the variance and the lag-1 autocorrelation are calculated using a 30-day sliding window. 
 
 ```{r cs138}
 # Code snippet 13.8: calculating vmoving ariance and auto-correlation
-
 csd$ms_rv = NA
 csd$ms_rac = NA
 for(i in 1:nrow(csd)){
 
+  # the statistics are undefined before day 30
   if(csd$dayno[i] < 30) next
   
+  # get the 30-day data window
   d <- subset(csd[1:i, ], 
               dayno > (csd$dayno[i] - 30) & 
               dayno <= csd$dayno[i])
-
+  
+  # get variance
   csd[i, ]$ms_rv <- var(d$ms_dt, na.rm = TRUE)
+  
+  # get the autocorrelation
   csd[i, ]$ms_rac <- acf(d$ms_dt,
                          lag.max = 1,
                          type = "correlation",
@@ -177,55 +253,10 @@ for(i in 1:nrow(csd)){
 }
 ```
 
+Next, we summarise the data, by calculating average values for each day (i.e., we neglect the variance in each day).
 
-## Results
-
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
-
-
-### Depression
-
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
-
-```{r cs139, fig.asp = .4}
-# Code snippet 13.9: Plot depression score
-
-d <- csd %>% filter(!is.na(scl90r_dep)) %>% select(dayno, scl90r_dep, phase)
-d <- unique(d)
-ggplot(data = d, 
-       aes(x = dayno, 
-           y = scl90r_dep, 
-           group = 1)) +
-  geom_point(aes(color = phase), 
-             show.legend = FALSE) + 
-  geom_step(aes(color = phase), 
-            show.legend = FALSE) + 
-  scale_x_continuous(
-    breaks = seq(from = 1, 
-                 to = 239, 
-                 by = 9)) +
-  theme(
-    axis.text.x = element_text(angle = 90, 
-                               hjust = 1))
-```
-
-
-### MoodState Variance
-
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
-
-```{r cs1310}
-# Code snippet 13.10: Summarise outcomes by day
-
+```{r cs139}
+# Code snippet 13.9: Summarise outcomes by day
 d <- csd %>%
   group_by(dayno) %>%
   summarise(
@@ -234,14 +265,13 @@ d <- csd %>%
     phase = phase[1])
 ```
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
 
-```{r cs1311, fig.asp = .4}
-# Code snippet 13.11: Plot variance
+## Mood state variance
 
+We can now plot the mood state variance. Did it, as predicted, increase considerably prior to the relapse around day 120?
+
+```{r cs1310, fig.asp = .5}
+# Code snippet 13.10: Plot variance
 ggplot(data = d, 
        aes(x = dayno, 
            y = ms_rv)) +
@@ -258,16 +288,12 @@ ggplot(data = d,
 ```
 
 
-### MoodState Autocorrelation
+## MoodState Autocorrelation
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
-bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
-Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
-dui viverra.
+Did the lag-1 autocorrelation also increase prior to day 120?
 
-```{r cs1312, fig.asp = .4}
-# Code snippet 13.12: Plot autocorrelation
-
+```{r cs1311, fig.asp = .5}
+# Code snippet 13.11: Plot autocorrelation
 ggplot(data = d, 
        aes(x = dayno, 
            y = ms_rac)) +
@@ -281,6 +307,9 @@ ggplot(data = d,
   theme(axis.text.x = element_text(angle = 90, 
                                    hjust = 1))
 ```
+
+## Network analysis
+
 
 
 ## Discussion
