--- a/part5/csd.Rmd
+++ b/part5/csd.Rmd
@@ -12,6 +12,7 @@ early, to prevent the relapse from occuring.
 But what changes, exactly, should we look for? What are these early warning
 signs?
 
+
 ## Critical Slowing Down
 
 Critical Slowing Down (CSD) is a concept from dynamic systems theory. In
@@ -27,7 +28,7 @@ There are three statistical indicators of CSD [Scheffer2009; Dakos2010]:
 
 - Increased auto-correlation
 
-- Increased spatial correlation
+- Increased spatial correlation (i.e., iter-item correlations)
 
 
 ## The CSD N = 1 Study
@@ -109,65 +110,56 @@ e1 = e.divisive(matrix(d$scl90r_dep), sig = .01, min.size = 5)
 d$cluster <- e1$cluster
 ```
 
-### Defining the mental state scale
+### Defining the mental states
 
-To define a measure of 'mental state', the researchers selected 13 items from the full EMA dataset. They grouped these items in 5 factors: positive affect (pa; 4 items), negative affect (na; 4 items), mental unrest (mu; 3 items), suspiciousness (su; 1 item), and worrying (wo; 1 item).
-
-In this reconstruction, we calculate the mental state score as the sum of the standardized scores of the five factors.   
+The researchers selected 13 items from the full EMA dataset. They grouped
+these items in 5 factors: positive affect (pa; 4 items), negative affect (na; 4
+items), mental unrest (mu; 3 items), suspiciousness (su; 1 item), and worrying
+(wo; 1 item). 
 
 ```{r cs133}
 # Code snippet 13.3: mood state calculation
 
 # positive affect
-pa <- c("mood_enthus", "mood_cheerf", 
-        "mood_strong", "mood_satisfi")
+pa_items <- c("mood_enthus", "mood_cheerf", 
+              "mood_strong", "mood_satisfi")
 
 # negative affect  
-na <- c("mood_lonely", "mood_anxious", 
-        "mood_guilty", "mood_doubt")
+na_items <- c("mood_lonely", "mood_anxious", 
+              "mood_guilty", "mood_doubt")
 
 # mental unrest
-mu <- c("mood_irritat", "pat_restl", 
-        "pat_agitate")
+mu_items <- c("mood_irritat", "pat_restl", 
+              "pat_agitate")
 
 # calculate factor scores
+
 csd$pa <- csd %>%
-  select(pa) %>%
-  scale(.) %>%
+  select(pa_items) %>%
   rowMeans(., na.rm = TRUE)
+csd$pa <- -csd$pa
 
 csd$na <- csd %>%
-  select(na) %>%
-  scale(.) %>%
+  select(na_items) %>%
   rowMeans(., na.rm = TRUE)
 
 csd$mu <- csd %>%
-  select(mu) %>%
-  scale(.) %>%
+  select(mu_items) %>%
   rowMeans(., na.rm = TRUE)
 
-csd$su <- scale(csd$mood_suspic)
-csd$wo <- scale(csd$pat_worry)
-
-# Moodstate score: sum of factors
-# (reverse score pa, to let high scores reflect less favorable conditions)
-csd$pa <- -csd$pa
-csd$ms = select(csd, pa, na, mu, su, wo) %>%
-  rowSums(na.rm = TRUE)
-
-csd$ms <- csd$mood_anxious + csd$mood_lonely + csd$mood_guilty + csd$mood_doubt +
-          csd$mood_irritat + csd$pat_restl + csd$pat_agitate + csd$mood_suspic + 
-          csd$pat_worry  - 
-          csd$mood_enthus - csd$mood_cheerf - csd$mood_strong - csd$mood_satisfi
-
+csd$su <- csd$mood_suspic
+csd$wo <- csd$pat_worry
 ```
 
 
 ### Remove rows with many missing values.
 
-For the mood state variable to be valid, its factors should be adequately
-measured. Rows, in which one or more of the components had missing values, are
-therefore removed from the analysis.
+In this reconstruction, we calculate the overall mental state score as the sum
+of the detrended scores of the five factors.
+
+For the overall mood state variable to be valid, its factors should be
+adequately measured. Rows, in which one or more of the factors had missing
+values, are therefore removed from the analysis.
 
 ```{r cs134}
 # Code snippet 13.4: missing value removal
@@ -178,26 +170,61 @@ csd <- csd %>% filter(nna == 0)
 ```
 
 
-## De-trending the mood state
+## De-trending the mood states
 
 Since trends in time-series can distort the variance and autocorrelation, we
-need to de-trend the moodstate variable. 
+mood state variables were detrended.
 
-Let's first confirm that a trend in the data, indeed, exists. If we plot
-moodstate over time, we see a gradually increase, and two embedded
-subtrends.
+To de-trend, we fit a generalized additive model with a spline-based smoother.
+This models the trend. By using the residuals of his model (i.e., by subtracting
+the predicted score from the observed score), the trends are removed.
 
-```{r cs135, fig.asp = .4}
-# Code snippet 13.5: plot moodstate score over time
-g <- ggplot(data = csd, 
+```{r}
+library(KernSmooth)
+
+detrend <- function(y) {
+  x <- as.numeric(as.POSIXct(paste(csd$date, csd$resptime_s)))
+  est <- locpoly(x, 
+                 y, 
+                 degree = 3, bandwidth =  604800, gridsize = length(y))
+  #plot(est, type = "l")
+  
+  #fm <- mgcv::gam(formula = y ~ s(dayno, bs = "cs"), data = csd)
+  #residuals(fm)
+  y - est$y
+}
+
+csd$pa_dt <- detrend(csd$pa) 
+csd$na_dt <- detrend(csd$na) 
+csd$mu_dt <- detrend(csd$mu) 
+csd$su_dt <- detrend(csd$su) 
+csd$wo_dt <- detrend(csd$wo) 
+```
+
+Let's take a look at the effec of detreding. If we plot positve affect over
+time, we see a gradually increase, and two embedded subtrends. The detrended
+variable does not display these trends anymore.
+
+```{r cs135, fig.asp = .8}
+# Code snippet 13.5: demonstrate detrending
+
+# store pa and pa_dt in a long format dt, to facet on them in the plot
+d <- csd %>% 
+  select(pa, pa_dt, dayno) %>% 
+  gather(pa, pa_dt, -dayno, 
+         key = "v", value = "score")
+
+# compare raw and detrended pa
+g <- ggplot(data = d, 
             aes(x = dayno, 
-                y = ms)) +
+                y = score)) +
   geom_smooth() + 
-  geom_line() + 
+  geom_line(alpha = .5, size = .5) + 
   scale_x_continuous(
     breaks = seq(from = 1, 
                  to = 239, 
                  by = 9)) +
+  facet_grid(v~., scales = "free") + 
   theme(
     axis.text.x = element_text(angle = 90, 
                                hjust = 1))
@@ -205,86 +232,67 @@ g <- ggplot(data = csd,
 g
 ```
 
-To de-trend, we fit a generalized additive model with a spline-based smoother. This models the trend. By using the residuals of his model (i.e., by subtracting the predicted score from the observed score), the trends are removed.
-
-```{r cs136}
-# Code snippet 13.6: de-trending moodstate
-fm <- mgcv::gam(formula = ms ~ s(dayno, bs = "cs"), data = csd)
-csd$ms_dt <- residuals(fm)
-```
-
-To check the succes of the de-trending, plot the de-trended variable over time. As can be seen, the gradual increase in the previous plot has disappeared. 
-
-```{r cs137, fig.asp = .4}
-# Code snippet 13.7: plot de-trended moodstate
-g$mapping$y <- substitute(csd$ms_dt)
-g
-```
-
-Note how the definition of the first plot is used to produce the second. Do not write more code than necessary!
-
 
 ## Calculating the moving average of mood state variance & autocorrelation
+
+The variance and autocorrelation are calculated from the summed, standardized
+mood states.
+
+```{r cs138b}
+csd$ms <- csd %>% select(pa_dt, na_dt, mu_dt, wo_dt, su_dt) %>% 
+  rowSums
+```
 
 Both the variance and the lag-1 autocorrelation are calculated using a 30-day sliding window. 
 
 ```{r cs138}
-# Code snippet 13.8: calculating vmoving ariance and auto-correlation
-csd$ms_rv = NA
-csd$ms_rac = NA
-for(i in 1:nrow(csd)){
+# Code snippet 13.8: calculating variance and auto-correlation in 30-day windows
+d <- data.frame(dayno = 1:max(csd$dayno))
+d <- left_join(d, unique(csd[c("dayno", "phase")]))
+d$phase[d$dayno == 125] = "exp: zero" # no data at day 125
 
-  # the statistics are undefined before day 30
-  if(csd$dayno[i] < 30) next
-  
+d$ms_rv = NA
+d$ms_rac = NA
+for(i in 30:max(csd$dayno)){
+
   # get the 30-day data window
-  d <- subset(csd[1:i, ], 
-              dayno > (csd$dayno[i] - 30) & 
-              dayno <= csd$dayno[i])
+  w <- subset(csd, 
+              dayno > (i - 30) & 
+              dayno <= i)
   
   # get variance
-  csd[i, ]$ms_rv <- var(d$ms_dt, na.rm = TRUE)
+  d$ms_rv[i] <- var(w$ms, na.rm = TRUE)
   
   # get the autocorrelation
-  csd[i, ]$ms_rac <- acf(d$ms_dt,
-                         lag.max = 1,
-                         type = "correlation",
-                         plot = FALSE)$acf[2]
+  d$ms_rac[i] <- cor(w$ms, lag(w$ms), use = "complete.obs")
 }
-```
-
-Next, we summarise the data, by calculating average values for each day (i.e., we neglect the variance in each day).
-
-```{r cs139}
-# Code snippet 13.9: Summarise outcomes by day
-d <- csd %>%
-  group_by(dayno) %>%
-  summarise(
-    ms_rac = mean(ms_rac),
-    ms_rv = mean(ms_rv), 
-    phase = phase[1])
 ```
 
 
 ## Mood state variance
 
-We can now plot the mood state variance. Did it, as predicted, increase considerably prior to the relapse around day 120?
+We can now plot the mood state variance. Did it, as predicted, increase
+considerably prior to the relapse around day 120?
 
 ```{r cs1310, fig.asp = .5}
 # Code snippet 13.10: Plot variance
 ggplot(data = d, 
-       aes(x = dayno, 
-           y = ms_rv)) +
-  geom_line(aes(color = phase, 
-                group = 1), 
-            show.legend = FALSE) +
-  scale_x_continuous(
-    breaks = seq(from = 1, 
-                 to = 239, 
-                 by = 9)) +
-  theme(
-    axis.text.x = element_text(angle = 90, 
-                               hjust = 1))
+       mapping = aes(x = dayno, 
+                     y = sqrt(ms_rv))) +
+  geom_line(mapping = aes(color = phase,
+                          group = 1)) +
+  scale_x_continuous(breaks = seq(from = 1, 
+                                  to = 239, 
+                                  by = 9)) +
+  scale_y_continuous(limits = c(1, 3.5),
+                     breaks = seq(from = 1,
+                                  to = 3.5,
+                                  by = 0.5)) + 
+  theme(axis.text.x = element_text(angle = 90, 
+                                   hjust = 1),
+        legend.position="top", 
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank())
 ```
 
 
@@ -298,14 +306,16 @@ ggplot(data = d,
        aes(x = dayno, 
            y = ms_rac)) +
   geom_line(aes(color = phase, 
-                group = 1), 
-            show.legend = FALSE) +
+                group = 1)) +
   scale_x_continuous(
     breaks = seq(from = 1, 
                  to = 239, 
                  by = 9)) +
   theme(axis.text.x = element_text(angle = 90, 
-                                   hjust = 1))
+                                   hjust = 1),
+        legend.position="top",
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank())
 ```
 
 ## Network analysis
